<resources>
    <string name="facebook_app_id">609252116242707</string>
    <string name="fb_login_protocol_scheme">fb609252116242707</string>
    <string name="twitter_app_key">hJZT0uzRvsVow5PeOmraYmImv</string>
    <string name="twitter_secret">uvGRCb5COThkg6aJUW1HmOttOuI9PrGkGNI9o8aPYYD0mbXIba</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="app_name" translatable="false">Davai</string>
    <string name="text_splash" translatable="false">Book Whatever you want </string>
    <string name="text_splash2" translatable="false">by one click</string>
    <string name="choose_lang" translatable="false">Choose App Language</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">Arabic</string>
    <string name="sign_with" translatable="false">Sign In With</string>
    <string name="or" translatable="false">OR</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="skip_login" translatable="false">Skip Login</string>
    <string name="sign_in_bar" translatable="false">Sign In</string>
    <string name="email_hint" translatable="false"> Email </string>
    <string name="password_hint" translatable="false"> Password</string>
    <string name="forget_pwd" translatable="false">Forget Password?Click here</string>
    <string name="user">User</string>
    <string name="vendor">Vendor</string>
    <string name="mobil">Mobile</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="first_name">  First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="accept_term"><![CDATA[Accept Terms&Conditions]]></string>
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_phone">Vendor Phone</string>
    <string name="vendor_site">Vendor Website</string>
    <string name="vendor_email">Vendor Email Address</string>
    <string name="vendor_user_name">User Name</string>
    <string name="v_email">Email</string>
    <string name="v_description">Write Vendor Description</string>
    <string name="next">Next</string>
    <string name="category">Category</string>
    <string name="service">Services</string>
    <string name="working_day">Working Days</string>
    <string name="working_hours">Working Hours</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="upload_cover">Upload Cover</string>
    <string name="category_pop_title">Choose Your Vendor Category</string>
    <string name="done">Done</string>
    <string name="onclick_popup_title">Choose Your Vendor Services</string>
    <string name="service_price">Service Price</string>
    <string name="add_employees">Add Employees</string>
    <string name="menu">Menu</string>
    <string name="favorite">Favourite</string>
    <string name="reservation">Reservation</string>
    <string name="home">Home</string>
    <string name="user_name">User Name</string>
    <string name="my_profile">My Profile</string>
    <string name="create_ads">Create Ads</string>
    <string name="about">About Davai</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rata App</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="about_btn">About</string>
    <string name="service_btn">Services</string>
    <string name="chat_btn">Live Chat</string>
    <string name="v_category">Vendor Category</string>
    <string name="select_employee">Select Employee</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="reserve">Reserve</string>
    <string name="write_here">Write Here...</string>
    <string name="send">Send</string>
    <string name="my_reservation">My Reservation</string>
    <string name="search_vendor">Search Vendor</string>
    <string name="select_category">Select Category</string>
    <string name="select_vendor">Select Vendor</string>
    <string name="new_reservation">New Reservation</string>
    <string name="select_services">Choose From these Services</string>
    <string name="edit_reservation">Edit Reservation</string>
    <string name="status">Status</string>
    <string name="reserved">Reserved</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="reschedule">Reschedule</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="edit_services">Edit services/Employee</string>
    <string name="select_service">Select Services</string>
    <string name="select_services_employee">Select Services/Employee</string>
    <string name="available">Available</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="security">Security</string>
    <string name="current_pwd">Current Password</string>
    <string name="new_pwd">New Password</string>
    <string name="repeat_pwd">Repeat Password</string>
    <string name="chat_list">Chat List</string>
    <string name="notification">Notifications</string>
    <string name="new_update">New Update has been Published</string>
    <string name="terms_text">Other than the advantages listed in the answers given, one more advantage of NestedScrollView
        over ScrollView is its compatibility with CoordinatorLayout. The ScrollView does not cooperate with the CoordinatorLayout.
        You have to use NestedScrollView to get "scroll off-screen" behaviour for the toolbar.as the name suggests is used when there is
        a need for a scrolling view inside another scrolling view. Normally this would be difficult to accomplish since the system would
        be unable to decide which view to scroll.</string>
    <string name="choose_msg_type">Choose Your Message Type</string>
    <string name="about_devai">About Davai</string>
    <string name="chat">Chat</string>
    <string name="about_text">Other than the advantages listed in the answers given, one more advantage of NestedScrollView
        over ScrollView is its compatibility with CoordinatorLayout. The ScrollView does not cooperate with the CoordinatorLayout.</string>
    <string name="add_your_ads">Add your ads to Devai Home Page</string>
    <string name="ads_will_be">Your ads will be one of 10 slider images</string>
    <string name="devai_home_page">in Devai Home Page</string>
    <string name="upload_ada_image">Upload Ads Image</string>
    <string name="image_size">Image size shoud be 1200 x 600</string>
    <string name="reserve_ads_day">Reserve Ads Days</string>
    <string name="ads">Ads</string>
    <string name="ads_will_run">Your Ads will run for 20 Days</string>
    <string name="ads_will_spend">Your Ads will spent</string>
    <string name="pay_via">Pay Via</string>
    <string name="paypal">PayPal</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="expire_date">EXPIRATION DATE</string>
    <string name="card_honer">CARD HOLDER\'S NAME</string>
    <string name="cvv">CVV</string>
    <string name="confirm_pay"><![CDATA[Confirm & Pay 500 SAR]]></string>
    <string name="visa">Visa</string>
    <string name="master_card">MasterCard</string>
    <string name="am_express">American Express</string>
    <string name="my_chat">My Chat</string>
    <string name="my_vendor">My Vendor</string>
    <string name="cover">Cover</string>
    <string name="logo">Logo</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="activation_code">Enter Activation Code</string>
    <string name="choose_gender">Choose Your Gender First</string>
    <string name="check_condition">Accept Terms and Condition First</string>
    <string name="not_empity">Cannot Be Empty</string>
    <string name="successfully_signUp">Successfully SignUp</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="not_signIn">User Not Found</string>
    <string name="user_update">User Update Successfully</string>
    <string name="incorrect_data">Your Passwords not Match</string>
    <string name="add_favourite">Added To Favourite Successfully</string>
    <string name="delete_favourite">Your Favourite has been Deleted</string>
    <string name="vendor_address">Vendor Address</string>
    <string name="vendor_street">Vendor Street</string>
    <string name="vendor_district">Vendor District</string>
    <string name="must_login">You must Login First</string>
    <string name="opinion">Opinion</string>
    <string name="spam">Spam</string>
    <string name="other">Other</string>
    <string name="msg_send">Message Send Successfully</string>
    <string name="enter_your_msg">Enter your Message First</string>
    <string name="pwd_send">Your Password Send to This Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="add_one_emp">Enter Price and Employee Name</string>
    <string name="check_service">Check at Least One Service</string>
    <string name="no_favourite">You have not Favourite Vendor</string>
    <string name="select_date_first">Select Date First</string>
    <string name="select_vendor_first">Select Vendor and Service First</string>
    <string name="data_update">Your Info Updated Successfully</string>
    <string name="update">Update</string>
    <string name="all_field_required">All Field Required</string>
    <string name="user_terms"><![CDATA[User Terms&Condition]]></string>
    <string name="vendor_terms"><![CDATA[Vendor Terms&Condition]]></string>
    <string name="no_reservation">No Reservation For This User</string>
    <string name="deleleted">Reservation Deleted Successfully</string>
    <string name="update_service">Update Your Services</string>
    <string name="emp">Employees</string>
    <string name="successfully_update">Successfully Updated</string>
    <string name="server_error">Server Error!!</string>
    <string name="all_cities">All Cities</string>
    <string name="all_categoyr">All Category</string>
    <string name="description">Write Description</string>
    <string name="ads_post">Image And Description Required</string>
    <string name="enter_logo_cover">Select Logo And Cover</string>
    <string name="sharevia">Share Via</string>
    <string name="select_cover">Select Cover First</string>
    <string name="select_logo">Select Logo First</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="no_img">No Image For Ads</string>
    <string name="no_select_image">No Image Selected</string>
    <string name="loading">Loading</string>
    <string name="finish_app">Are You Sure to Close The App?</string>
    <string name="successfully_created">Successfully Created</string>
    <string name="delete_reservation">This Reservation Will be deleted from your Reservation?</string>
    <string name="ok">Ok</string>
    <string name="current_pwd_error">Current Password not Correct</string>
    <string name="security_update">Security Updated</string>
    <string name="defautt_msg">Hello. How Can I Help You</string>
    <string name="select_workingDays">Select Working Days</string>
    <string name="select_workingHour">Select Working Hours</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="rate">Rate</string>
    <string name="no_reserv">No Reservation ,Back to Reserve</string>
</resources>