<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/popup_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forget_pwd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/enter_your_email"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_pwd_title"
        app:layout_constraintVertical_bias="0.087">

        <EditText
            android:id="@+id/forget_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bg2"
            android:hint="@string/enter_your_email"
            android:maxLines="1"
            android:singleLine="true"
            android:paddingStart="10dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorBrown"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/relativeLayout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/after_press_bg"
                android:text="@string/send"
                android:textColor="@color/colorBlue" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/after_press_bg"
                android:text="@string/cancel"
                android:textColor="@color/colorBlue" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_layout"
        app:layout_constraintVertical_bias="0.295">

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/et_bg2"
            android:hint="@string/activation_code"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorWhite"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/et_bg2"
            android:hint="@string/new_pwd"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorWhite"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/et_bg2"
            android:hint="@string/repeat_pwd"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorWhite"
            android:textSize="13sp" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/after_press_bg"
            android:text="@string/save"
            android:textColor="@color/colorBlue" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>