<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/about_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/about_btn"
            android:background="@drawable/top_btn_bg"
            android:textColor="@color/colorBlue" />

        <Button
            android:id="@+id/service_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:text="@string/service_btn"
            android:background="@drawable/top_btn_bg"
            android:textColor="@color/colorBlue" />

        <Button
            android:id="@+id/chat_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:text="@string/chat_btn"
            android:background="@drawable/top_btn_bg"
            android:textColor="@color/colorBlue" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>