<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_background">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/colorBrown"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/no_reserv"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_first"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/no_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/after_press_bg"
                    android:text="@string/no"
                    android:textColor="@color/colorBlue" />

                <Button
                    android:id="@+id/yes_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/after_press_bg"
                    android:text="@string/yes"
                    android:textColor="@color/colorBlue" />

            </RelativeLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>