<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/app_bg"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:elevation="100dp">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_profile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/user_name" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:paddingStart="10dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/sign_in_layout"
            android:padding="7dp"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sign_in_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/sign_in"/>

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_profile_layout"
            android:padding="7dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/my_profile_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/user2"/>

            <TextView
                android:id="@+id/my_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/my_vendor_layout"
            android:padding="7dp"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/my_vendor_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/user2"/>

            <TextView
                android:id="@+id/my_vendor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_vendor"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_notify_layout"
            android:padding="7dp"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/notify_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/notification2"/>

            <TextView
                android:id="@+id/notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/creare_ads_layout"
            android:padding="7dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/create_ads_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/create_ads"/>

            <TextView
                android:id="@+id/create_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_ads"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/about_layout"
            android:padding="7dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/about_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/about"/>

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/termsCondition_layout"
            android:padding="7dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/terms_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/terms"/>

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/contact_us_layout"
            android:padding="7dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/contact_us_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/contact_us"/>

            <TextView
                android:id="@+id/contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/share_layout"
            android:padding="7dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/share_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/share"/>

            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_app"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/rate_app_layout"
            android:padding="7dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/rate_app_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/star"/>

            <TextView
                android:id="@+id/rate_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_app"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/sign_out_layout"
            android:padding="7dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sign_out_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/sign_out"/>

            <TextView
                android:id="@+id/sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>
 <ImageView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:src="@drawable/logo"/>

</LinearLayout>

</android.support.design.widget.NavigationView>